--- a/index.html
+++ b/index.html
@@ -44,6 +44,34 @@
                             <a href="#">Контакты</a>
                         </li>
                     </ul>
+                    <ul class="menu__list">
+                        <li class="menu__option">
+                            <a href="#">О гонке</a>
+                        </li>
+                        <li class="menu__option">
+                            <a href="#">Трек</a>
+                        </li>
+                        <li class="menu__option">
+                            <a href="#">Lamborghini Super tdofeo</a>
+                        </li>
+                        <li class="menu__option">
+                            <a href="#">Новости</a>
+                        </li>
+                        <li class="menu__option">
+                            <a href="#">Купить билеты</a>
+                        </li>
+                        <li class="menu__option">
+                            <a href="#">Смотреть онлайн</a>
+                        </li>
+                        <li class="menu__option">
+                            <a href="#">Контакты</a>
+                        </li>
+                    </ul>
+                    <div class="menu__burger">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
                 </nav>
             </div>
         </header>
@@ -51,7 +79,7 @@
             <section class="landing">
                 <div class="landing__container container">
                     <div class="landing__content">
-                        <h1 class="landing__title">LAMBORGHINI SUPER tdOFEO</h1>
+                        <h1 class="landing__title">LAMBORGHINI SUPER TROFEO</h1>
                         <h2 class="landing__subtitle">Гранд-финал 2022<br>
                             <span>3-6 ноября</span>
                         </h2>
@@ -340,9 +368,10 @@
                                     выиграть титул, спустя четыре года после последнего</p>
                             </div>
                         </div>
-                        <div class="blog__image">
+                        <img src="/img/polygon__racer.png" alt="">
+                        <!-- <div class="blog__image">
                             <img src="/img/polygon__racer.png" alt="">
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </section>
