--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     </div>
                     <div class="landing__button">
                         <a href="#">
-                            <img src="/img/arrow.svg" alt="Arrow">
+                            <img src="img/arrow.svg" alt="Arrow">
                         </a>
                     </div>
 
@@ -403,17 +403,17 @@
                             <ul>
                                 <li>
                                     <a href="">
-                                        <img src="/img/yt.svg" alt="">
+                                        <img src="img/yt.svg" alt="">
                                     </a>
                                 </li>
                                 <li>
                                     <a href="">
-                                        <img src="/img/inst.svg" alt="">
+                                        <img src="img/inst.svg" alt="">
                                     </a>
                                 </li>
                                 <li>
                                     <a href="">
-                                        <img src="/img/fb.svg" alt="">
+                                        <img src="img/fb.svg" alt="">
                                     </a>
                                 </li>
                             </ul>
